# agent-comparison-01

./: .env.template  .gitignore  README.md  prompt.md  pyproject.toml  research_data.json  test_features.py  test_full_features.py  validate_all.py
.data/: db.json
data/: catalog.json  graph.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  api.js  api.ts  index.css  types.ts  websocket.js
frontend/src/components/: Dashboard.css  Dashboard.jsx  Detail.css  GraphView.css  GraphView.jsx  Navbar.tsx  PaperDetail.jsx  RepositoryDetail.jsx  Search.css  Search.jsx  StatusBar.css  StatusBar.jsx  Theory.css  Theory.jsx
frontend/src/pages/: Dashboard.tsx  Graph.tsx  Search.tsx  Theory.tsx
src/researcher/: __init__.py  api.py  config.py  database.py  db.py  ingest.py  ingestor.py  llm.py  llm_service.py  main.py  models.py  paper_cataloguer.py  repo_cataloguer.py  spa_handler.py  store.py
