[project]
name = "researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andre Ratzenberger", email = "andre.ratzenberger@whiteduck.de" }
]
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "litellm>=1.80.0",
    "networkx>=3.5",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
    "tinydb>=4.8.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
researcher = "researcher:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
